--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,107 @@
 % Encoding: UTF-8
 
-@Article{FooBar,
-  author    = {Dummy Smith},
-  title     = {This Paper Has No Title IF IM STILL HERE YOU ARENT READY TO PUBLISH IF IM STILL HERE YOU AREN'T READY TO PUBLISH IF IM STILL HERE YOU ARENT READY TO PUBLISH},
-  journal   = {The Journal of Foo Bar},
-  year      = {2018},
-  owner     = {luke},
-  timestamp = {2018-02-20}
+@article{Mhaskar16,
+  author =       {Mhaskar, H. N. and Poggio, T.},
+  title =        {Deep vs. shallow networks: An approximation theory
+                  perspective},
+  journal =      {Analysis and Applications},
+  volume =       14,
+  number =       06,
+  pages =        {829-848},
+  year =         2016,
+  doi =          {10.1142/S0219530516400042},
+}
+
+@inproceedings{Nair10,
+  author =       {V. {Nair} and G. E. {Hinton}},
+  title =        {Rectified Linear Units Improve Restricted Boltzmann Machines},
+  year =         2010,
+  booktitle =    {Proc. Int. Conf. Mach. Learn. (ICML)},
+  pages =        {807–814},
+  numpages =     8,
+  location =     {Haifa, Israel},
+  series =       {ICML'10}
+}
+
+@article{Trabelsi2018DeepCN,
+  title =        {Deep Complex Networks},
+  author =       {{C. Trabelsi and Olexa Bilaniuk and Dmitriy Serdyuk and
+                  Sandeep Subramanian and J. F. Santos and Soroush Mehri and N.
+                  Rostamzadeh and Yoshua Bengio and C. Pal}},
+  journal =      {ArXiv},
+  year =         2018,
+  volume =       {abs/1705.09792}
+}
+
+@article{hanin2019,
+  title =        {Universal function approximation by deep neural nets with
+                  bounded width and relu activations},
+  author =       {Hanin, Boris},
+  journal =      {Mathematics},
+  volume =       7,
+  number =       10,
+  pages =        992,
+  year =         2019,
+  publisher =    {Multidisciplinary Digital Publishing Institute}
+}
+
+@article{hornik_91,
+  title =        {Approximation capabilities of multilayer feedforward networks},
+  volume =       4,
+  journal =      {Neural Netw.},
+  author =       {K. {Hornik}},
+  year =         1991,
+  pages =        {251–257}
+}
+
+@article{huang_06,
+  author =       {G. {Huang}, and L. {Chen},and C. {Siew}},
+  title =        {Universal Approximation Using Incremental Constructive
+                  Feedforward Networks with Random Hidden Nodes},
+  year =         2006,
+  volume =       17,
+  number =       4,
+  issn =         {1045-9227},
+  journal =      {Trans. Neur. Netw.},
+  pages =        {879–892}
+}
+
+@article{lensho_93,
+  title =        {Multilayer feedfor-ward networks with a nonpolynomial
+                  activation function can approxi-mate any function},
+  volume =       6,
+  journal =      {Neural Netw.},
+  author =       {M. {Lensho} and {V. Y. Lin, A. Pinkus, and S. Schocken}},
+  year =         1993,
+  pages =        {861–876}
+}
+
+@inproceedings{mildenhall2020nerf,
+  title =        {Nerf: Representing scenes as neural radiance fields for view
+                  synthesis},
+  author =       {Mildenhall, Ben and Srinivasan, Pratul P and Tancik, Matthew
+                  and Barron, Jonathan T and Ramamoorthi, Ravi and Ng, Ren},
+  booktitle =    {European Conference on Computer Vision},
+  pages =        {405--421},
+  year =         2020,
+  organization = {Springer}
+}
+
+@article{park_91,
+  title =        {Universal approximation using radial-basis-function networks},
+  volume =       3,
+  journal =      {Neural Comput.},
+  author =       {{J. Park and I. W. Sandberg}},
+  year =         1991,
+  pages =        {246–267}
+}
+
+@book{strang_2016,
+  place =        {Wellesley, MA},
+  title =        {Introduction to linear algebra},
+  publisher =    {Wellesley - Cambridge Press},
+  author =       {Strang, Gilbert},
+  year =         2016
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
