--- a/sections/095-authors.tex
+++ b/sections/095-authors.tex
@@ -11,11 +11,12 @@
 %\newpage
 \vspace{-0.5 cm}
 
-\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{photos/renaud.jpg}}]{Luke Renaud}
-%\begin{IEEEbiographynophoto}{Luke Renaud}
-(S’13) received the B.S. in Electrical Engineering \textit{summa cumme laude} with a from Washington State University in Pullman, WA in 2013. He is currently pursuing a Ph.D. in RF Microelectronics from Washington State University, Pullman, WA.
 
-If you're reading this paragraph as a reviewer, then the person who submit the paper has forgotten to remove my template BIO from their document. You really should reject their paper, that's pretty sloppy.
+
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{photos/AlirezaMorsali.jpg}}]{AlirezaMorsali}
+%\begin{IEEEbiographynophoto}{Luke Renaud}
+received the B.Sc. and M.Sc. degrees in electrical engineering from University of Kerman, Iran, in 2009, and 2011, respectively. He finished his Ph.D. under supervision of Prof. Champagne in 2020 at McGill University, Montreal, Canada. His research interests include signal processing, machine learning and artificial intelligence. He was a recipient of several awards and scholarships, including, the McGill
+Engineering Doctoral Award, STARaCom Collaborative Grant, and McGill BLUE Fellowship.
 %\end{IEEEbiographynophoto}
 \vspace{-0.8 cm}
 \end{IEEEbiography}
