--- a/sections/01-intro.tex
+++ b/sections/01-intro.tex
@@ -1,5 +1,6 @@
 \section{Introduction}\label{sec:10-intro}%
-\IEEEPARstart{L}{orem} ipsum dolor sit amet, consectetur adipiscing elit. Integer ut mi sem. Vestibulum laoreet, velit non posuere rhoncus, massa enim tempus arcu, in sodales massa lorem ut arcu. Cras metus arcu, sagittis non orci eget, scelerisque volutpat ipsum. In ac dolor quis risus auctor aliquet ac non ex. Sed nec urna cursus, fringilla orci sit amet, dignissim mauris. Donec interdum lobortis ipsum, vel auctor diam volutpat hendrerit. Duis ex quam, faucibus id pharetra at, convallis ut tortor. Morbi ultrices posuere ligula, tincidunt scelerisque ligula semper ornare. Donec nec lorem porttitor, gravida orci eu, ultricies metus \dummy. Donec vestibulum, orci nec placerat porttitor, nisl mi hendrerit justo, a mattis neque mauris in nisl. Nunc lobortis, dui hendrerit accumsan cursus, lorem velit auctor ligula, pharetra faucibus tortor tellus suscipit arcu. Nam eget pulvinar nisl. Donec ornare blandit purus vel viverra. Nullam egestas convallis neque et laoreet. Proin ac egestas ipsum.
+\IEEEPARstart{L}{orem} ipsum dolor sit amet, consectetur adipiscing elit. Integer ut mi sem. Vestibulum laoreet, velit non posuere rhoncus, massa enim tempus arcu, in sodales massa lorem ut arcu. Cras metus arcu, sagittis non orci eget, scelerisque volutpat ipsum. In ac dolor quis risus auctor aliquet ac non ex. Sed nec urna cursus, fringilla orci sit amet, dignissim mauris. Donec interdum lobortis ipsum, vel auctor diam volutpat hendrerit. Duis ex quam, faucibus id pharetra at, convallis ut tortor. Morbi ultrices posuere ligula, tincidunt scelerisque ligula semper ornare. Donec nec lorem porttitor, gravida orci eu, ultricies metus. Donec vestibulum, orci nec placerat porttitor, nisl mi hendrerit justo, a mattis neque mauris in nisl. Nunc lobortis, dui hendrerit accumsan cursus, lorem velit auctor ligula, pharetra faucibus tortor tellus suscipit arcu. Nam eget pulvinar nisl. Donec ornare blandit purus vel viverra. Nullam egestas convallis neque et laoreet. Proin ac egestas ipsum.
+
 
 \editG{%
 \subsection{A green subsection}
@@ -11,3 +12,8 @@ Nullam vel nibh at odio rutrum scelerisque in et ligula. Cras ut efficitur leo, 
 Nullam laoreet tortor neque, sed scelerisque justo mollis at. Sed id rhoncus nulla. In sodales lobortis dolor in accumsan. Quisque vehicula sapien est, et aliquam lorem pretium eget. Donec id ante nec leo bibendum scelerisque. Nulla sed velit diam. In vulputate ac lacus ac vestibulum.
 
 Pellentesque fermentum mauris diam, et porttitor tortor porta quis. Aliquam consequat, est et vulputate fermentum, mauris tortor maximus lorem, rhoncus volutpat tellus eros et nibh. In a pharetra dui. Vivamus quis justo metus. Morbi dictum lorem vitae elit tristique pellentesque. Proin elementum placerat tortor vitae auctor. Ut cursus urna nec congue lobortis. Nulla facilisi. Cras maximus lacinia felis et maximus. Nam faucibus convallis sodales. 
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../Manuscript_V01"
+%%% End:
