--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,16 @@
 % Encoding: UTF-8
 
+@Article{FooBar,
+  author =       {Dummy Smith},
+  title =        {This Paper Has No Title IF IM STILL HERE YOU ARENT READY TO
+                  PUBLISH IF IM STILL HERE YOU AREN'T READY TO PUBLISH IF IM
+                  STILL HERE YOU ARENT READY TO PUBLISH},
+  journal =      {The Journal of Foo Bar},
+  year =         2018,
+  owner =        {luke},
+  timestamp =    {2018-02-20}
+}
+
 @article{Mhaskar16,
   author =       {Mhaskar, H. N. and Poggio, T.},
   title =        {Deep vs. shallow networks: An approximation theory
