--- a/sections/01-intro.tex
+++ b/sections/01-intro.tex
@@ -1,5 +1,5 @@
 \section{Introduction}\label{sec:10-intro}%
-\IEEEPARstart{L}{orem} ipsum dolor sit amet, consectetur adipiscing elit. Integer ut mi sem. Vestibulum laoreet, velit non posuere rhoncus, massa enim tempus arcu, in sodales massa lorem ut arcu. Cras metus arcu, sagittis non orci eget, scelerisque volutpat ipsum. In ac dolor quis risus auctor aliquet ac non ex. Sed nec urna cursus, fringilla orci sit amet, dignissim mauris. Donec interdum lobortis ipsum, vel auctor diam volutpat hendrerit. Duis ex quam, faucibus id pharetra at, convallis ut tortor. Morbi ultrices posuere ligula, tincidunt scelerisque ligula semper ornare. Donec nec lorem porttitor, gravida orci eu, ultricies metus. Donec vestibulum, orci nec placerat porttitor, nisl mi hendrerit justo, a mattis neque mauris in nisl. Nunc lobortis, dui hendrerit accumsan cursus, lorem velit auctor ligula, pharetra faucibus tortor tellus suscipit arcu. Nam eget pulvinar nisl. Donec ornare blandit purus vel viverra. Nullam egestas convallis neque et laoreet. Proin ac egestas ipsum.
+\IEEEPARstart{L}{orem} ipsum dolor sit amet, consectetur adipiscing elit. Integer ut mi sem. Vestibulum laoreet, velit non posuere rhoncus, massa enim tempus arcu, in sodales massa lorem ut arcu. Cras metus arcu, sagittis non orci eget, scelerisque volutpat ipsum. In ac dolor quis risus auctor aliquet ac non ex. Sed nec urna cursus, fringilla orci sit amet, dignissim mauris. Donec interdum lobortis ipsum, vel auctor diam volutpat hendrerit. Duis ex quam, faucibus id pharetra at, convallis ut tortor. Morbi ultrices posuere ligula, tincidunt scelerisque ligula semper ornare. Donec nec lorem porttitor, gravida orci eu, ultricies metus. Donec vestibulum, orci nec placerat porttitor, nisl mi hendrerit justo, a mattis neque mauris in nisl. Nunc lobortis, dui hendrerit accumsan cursus, lorem velit auctor ligula, pharetra faucibus tortor tellus suscipit arcu. Nam eget pulvinar nisl. Donec ornare blandit purus vel viverra. Nullam egestas convallis neque et laoreet. Proin ac egestas ipsum \dummy.
 
 
 \editG{%
