--- a/preamble.sty
+++ b/preamble.sty
@@ -149,6 +149,7 @@
 	\newcommand{\editG}[1]{{\color{editColorGreen}#1}}
 	\newcommand{\editBB}[1]{{\color{editColorBlueBlue}#1}}
 	\newcommand{\editRR}[1]{{\color{editColorRedRed}#1}}
+	\newcommand{\dummy}[1][cite]{\cite{FooBar}\todo{#1}\xspace}
 
 \else
 	\newcommand{\editB}[1]{#1}
